--- a/SendMailApp/MainWindow.xaml
+++ b/SendMailApp/MainWindow.xaml
@@ -6,37 +6,37 @@
         xmlns:local="clr-namespace:SendMailApp"
         mc:Ignorable="d"
         Title="MainWindow" Height="500" Width="600" Background="AliceBlue">
-    <Grid Margin="10">
+    <Grid Margin="15">
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="270"/>
+            <RowDefinition Height="7*"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="10*"/>
             <ColumnDefinition Width="90*"/>
         </Grid.ColumnDefinitions>
-        <TextBlock Text="件名:" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left" FontSize="20"/>
-        <TextBox Grid.Row="0" Grid.Column="1" Margin="5"/>
+        <TextBlock Text="件名:" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Right" FontSize="20" VerticalAlignment="Center" Margin="4"/>
+        <TextBox x:Name="tbTitle" Grid.Row="0" Grid.Column="1" Margin="5"/>
 
-        <TextBlock Text="To:" Grid.Row="1" Grid.Column="0"  HorizontalAlignment="Center" FontSize="20"/>
-        <TextBox Grid.Row="1" Grid.Column="1" Margin="5"/>
+        <TextBlock Text="To:" Grid.Row="1" Grid.Column="0"  HorizontalAlignment="Right" FontSize="20" VerticalAlignment="Center" Margin="4"/>
+        <TextBox x:Name="tbTo" Grid.Row="1" Grid.Column="1" Margin="5"/>
 
-        <TextBlock Text="Cc:" Grid.Row="2" Grid.Column="0"  HorizontalAlignment="Center" FontSize="20"/>
-        <TextBox Grid.Row="2" Grid.Column="1" Margin="5"/>
+        <TextBlock Text="Cc:" Grid.Row="2" Grid.Column="0"  HorizontalAlignment="Right" FontSize="20" VerticalAlignment="Center" Margin="4"/>
+        <TextBox x:Name="tbCc" Grid.Row="2" Grid.Column="1" Margin="5"/>
 
-        <TextBlock Text="Bcc:" Grid.Row="3" Grid.Column="0" HorizontalAlignment="Center" FontSize="20"/>
-        <TextBox Grid.Row="3" Grid.Column="1" Margin="5"/>
+        <TextBlock Text="Bcc:" Grid.Row="3" Grid.Column="0" HorizontalAlignment="Right" FontSize="20" VerticalAlignment="Center" Margin="4"/>
+        <TextBox x:Name="tbBcc" Grid.Row="3" Grid.Column="1" Margin="5"/>
 
-        <TextBlock Text="本文:" Grid.Row="4" Grid.Column="0" HorizontalAlignment="Center" FontSize="20" Height="27" Margin="6,0,7,0" Width="44" VerticalAlignment="Top"/>
-        <TextBox Grid.Row="4" Grid.Column="1" Margin="5"/>
+        <TextBlock Text="本文:" Grid.Row="4" Grid.Column="0" HorizontalAlignment="Right" FontSize="20" VerticalAlignment="Top" Margin="4"/>
+        <TextBox x:Name="tbBody" Grid.Row="4" Grid.Column="1" Margin="5"/>
 
-        <StackPanel Grid.Row="6" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right" Width="216" >
-            <Button Content="キャンセル" Width="100" Margin="4"/>
-            <Button Content="OK" Width="100" Margin="4"/>
+        <StackPanel Grid.ColumnSpan="2" Grid.Row="5" Grid.Column="0" Orientation="Horizontal" HorizontalAlignment="Right">
+            <Button x:Name="btCancel" Content="キャンセル" Width="80" Margin="4" Click="btCancel_Click"/>
+            <Button x:Name="btOk" Content="送信" Width="80" Margin="4" Click="btOk_Click"/>
         </StackPanel>
     </Grid>
 </Window>
