--- a/SendMailApp/MainWindow.xaml
+++ b/SendMailApp/MainWindow.xaml
@@ -38,8 +38,8 @@
 
         <TextBlock Text="添付ファイル：" Grid.Row="0" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Right" FontSize="11" />
         <ListBox x:Name="addfile" Grid.Row="0" Grid.RowSpan="4" Grid.Column="3" Margin="5"/>
-        <Button x:Name="addfileBT" Grid.Row="2" Grid.Column="2" Content="追加" Margin="3"/>
-        <Button x:Name="deletefileBT" Grid.Row="3" Grid.Column="2" Content="削除" Margin="3"/>
+        <Button x:Name="addfileBT" Grid.Row="2" Grid.Column="2" Content="追加" Margin="3" Click="addfileBT_Click"/>
+        <Button x:Name="deletefileBT" Grid.Row="3" Grid.Column="2" Content="削除" Margin="3" Click="deletefileBT_Click"/>
         
         <StackPanel Grid.ColumnSpan="4" Grid.Row="5" Grid.Column="0" Orientation="Horizontal" HorizontalAlignment="Right">            
             <Button x:Name="btCancel" Content="キャンセル" Width="80" Margin="4" Click="btCancel_Click"/>
