--- a/SendMailApp/ConfigWindow.xaml
+++ b/SendMailApp/ConfigWindow.xaml
@@ -28,19 +28,19 @@
                 </Grid.ColumnDefinitions>
                 <TextBlock Grid.Row="0" Grid.Column="0" Text="SMTPサーバー："
                            HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                <TextBox x:Name="tbSmtp" Grid.Row="0" Grid.Column="1" Margin="5,20" TextChanged="tbUserName_TextChanged" />
+                <TextBox x:Name="tbSmtp" Grid.Row="0" Grid.Column="1" Margin="5,20" TextChanged="tbText_TextChanged" />
 
                 <TextBlock Grid.Row="1" Grid.Column="0" Text="ユーザー名："
                            HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                <TextBox x:Name="tbUserName" Grid.Row="1" Grid.Column="1" Margin="5,20"  TextChanged="tbUserName_TextChanged"/>
+                <TextBox x:Name="tbUserName" Grid.Row="1" Grid.Column="1" Margin="5,20"  TextChanged="tbText_TextChanged"/>
 
                 <TextBlock Grid.Row="0" Grid.Column="2" Text="ポート："
                            HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                <TextBox x:Name="tbPort" Grid.Row="0" Grid.Column="3" Margin="5,20"  TextChanged="tbUserName_TextChanged"/>
+                <TextBox x:Name="tbPort" Grid.Row="0" Grid.Column="3" Margin="5,20"  TextChanged="tbText_TextChanged"/>
 
                 <TextBlock Grid.Row="1" Grid.Column="2" Text="パスワード："
                            HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                <PasswordBox x:Name="tbPassWord" Grid.Row="1" Grid.Column="3" Margin="5,20"/>
+                <PasswordBox x:Name="tbPassWord" Grid.Row="1" Grid.Column="3" Margin="5,20" PasswordChanged="tbPassWord_PasswordChanged"/>
 
                 <CheckBox x:Name="cbSsl" Grid.Row="3" Grid.Column="3" Content="SSL有効"
                           HorizontalAlignment="Center" VerticalAlignment="Center"/>
@@ -61,7 +61,7 @@
                 </Grid.ColumnDefinitions>
                 <TextBlock Grid.Row="1" Grid.Column="0" Text="送信元："
                            HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                <TextBox x:Name="tbSender" Grid.Row="1" Grid.Column="1" Margin="5"  TextChanged="tbUserName_TextChanged"/>
+                <TextBox x:Name="tbSender" Grid.Row="1" Grid.Column="1" Margin="5"  TextChanged="tbText_TextChanged"/>
             </Grid>
         </GroupBox>
 
